Updates from Overleaf

--- a/iucr.bib
+++ b/iucr.bib
@@ -1,3 +1,37 @@
+@article{Belland:82,
+author = {P. Belland and J. P. Crenn},
+journal = {Appl. Opt.},
+keywords = {Apertures; Diffraction theory; Fresnel diffraction; Gaussian beams; Laser resonators; Optical elements},
+number = {3},
+pages = {522--527},
+publisher = {OSA},
+title = {Changes in the characteristics of a Gaussian beam weakly diffracted by a circular aperture},
+volume = {21},
+month = {Feb},
+year = {1982},
+url = {http://ao.osa.org/abstract.cfm?URI=ao-21-3-522},
+doi = {10.1364/AO.21.000522},
+abstract = {A Gaussian beam weakly diffracted by a circular aperture can be approximated in the far field by another Gaussian beam with slightly different characteristics. Equations giving the intensity, the divergence, and the radius of the modified beam are derived in simple practical form for experimentalists. These approximated formulas show that, even in the case of negligible power losses through the aperture, the diffracted beam characteristics may appreciably differ from those of the incident beam. In a first approximation, diffraction effects may be ignored only if the ratio a/r0 of the aperture radius a to the 1/e intensity beam radius r0 in the aperture plane is larger than 3.},
+}
+
+@article{Tanaka:85,
+author = {Kazumasa Tanaka and Nobuhiro Saga and Koji Hauchi},
+journal = {Appl. Opt.},
+keywords = {Diffraction; Gaussian beams},
+number = {8},
+pages = {1098--1101},
+publisher = {OSA},
+title = {Focusing of a Gaussian beam through a finite aperture lens},
+volume = {24},
+month = {Apr},
+year = {1985},
+url = {http://ao.osa.org/abstract.cfm?URI=ao-24-8-1098},
+doi = {10.1364/AO.24.001098},
+abstract = {The diffraction field through a finite aperture lens is obtained by using the Kirchhoff-Huygens formula. The most focused point of the diffraction field differs depending on the definition of it. The positions of the maximum axial intensity, the minimum field spread, and the maximum encircled energy are calculated and compared. They vary depending on the incidence conditions, aperture radius, and the focal length.},
+}
+
+
+
 @book{knuth84,
   author = "Donald E. Knuth",
   title  =  "The \TeX{}book",
