Updates from Overleaf

--- a/template.tex
+++ b/template.tex
@@ -163,7 +163,7 @@ However, in real life the slit cannot be approximated by a Gaussian appodization
 NEXT IS TO INCLUDE REAL LENSES: NO EFFECT AS ONLY SINGLE Be LENS
 
 
-NEXT IS PARTIAL COHERENCE
+NEXT IS PARTIAL COHERENCE: TO DO...
 
 
 We now look at some relevant positions where some other beamline elements will be placed. These are positions $p_{fo1}=$\SI{164}{\meter} and   $p_{fo2}=$\SI{188}{\meter} measured from the source (\SI{99}{\meter} and \SI{123}{\meter} from the lens, respectively)
